# myscoutee

./: .gitignore  CONTRIBUTING.md  README.md  commands.txt  mqtt.txt  plan.txt  tasks.txt
.github/workflows/: gradle.yml
backup/mongo/: findCandidates.json
backup/mosquitto-debug/: .env  Dockerfile  README.md  docker-compose.yml  start.sh
backup/nginx-debug/: .gitignore  Readme
docs/: commands.txt  plan.txt  tasks.txt
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.js  tsconfig.app.json  tsconfig.json
frontend/src/: index.html  main.ts  manifest.webmanifest
frontend/src/_styles/: _calendar.scss  _chat.scss  _editor.scss  _fonts.scss  _form.scss  _frame.scss  _icons.scss  _icons_cp.scss  _list.scss  _panel.scss  styles.scss
frontend/src/app/: animation.ts  app-routing.module.ts  app-routing.strategy.ts  app.component.html  app.component.ts  app.module.ts  auth-guard.service.ts  global.var.ts  navigation.service.ts
frontend/src/app/business/: business-routing.module.ts  business.module.ts
frontend/src/app/dating/: dating-routing.module.ts  dating.module.ts
frontend/src/app/job/: job-routing.module.ts  job.module.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/services/: data.service.ts  event-bus.service.ts  http.service.ts  list.service.ts  mqtt.service.ts  transform.service.ts
frontend/src/app/ui/: material.module.ts  ui.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/lib/: index.ts  offscreen.ts
frontend/src/lib/ms-dialog/: index.html  index.ts
frontend/src/lib/ms-editor/: index.html  index.ts  magnifier.ts
frontend/src/lib/ms-list/: index.html  index.ts  interface.ts
server/: .env  docker-compose-prod.yml  docker-compose.yml  settings.gradle.kts  todo.txt
server/docker/images/mosquitto/plugins/mosquitto_external_auth/: CMakeLists.txt  Makefile  mosquitto_external_auth.c
server/docker/scripts/: mongo_import.sh
server/projects/profile/: build.gradle
utils/echo_server/: go.mod  main.go
(+679 files in other folders)
